# fire

./: .gitignore  NOTICE.txt  README.md  index.html  pyproject.toml  styles.css
.github/ISSUE_TEMPLATE/: bug_report.md  data-request.md  data_request.md  report-data-error.md
.github/workflows/: pages.yml  pypi.yaml
academic tests/: Portfolio_Sort.py
docs/: .gitignore  Gemfile  _config.yml  index.md
docs/_includes/: head_custom.html
docs/docs/: Errata.md  GRS检验的证明.md  configuration.md  release-plan.md
fire/: __init__.py
fire/cli/: command.py
fire/common/: config.py  const.py
fire/compute/: __init__.py  _numba_funcs.py  window.py  wrapper.py
fire/data/: __init__.py  datainfo.py  fake.py  file_reader.py  gateway.py
fire/evaluation/: __init__.py  eva_utils.py  evaluator.py  plots.py
firefin/: Untitled-1.ipynb  __init__.py
firefin/cli/: command.py
firefin/common/: config.ini  config.py  config.yaml
firefin/data/: __init__.py  datainfo.py  file_reader.py  gateway.py
firefin/evaluation/: eva_utils.py
navi_quant/: __init__.py
navi_quant/cli/: command.py
navi_quant/common/: config.py  const.py
navi_quant/compute/: __init__.py  _numba_funcs.py  wrapper.py
navi_quant/data/: __init__.py  datainfo.py  fake.py  file_reader.py  gateway.py
navi_quant/evaluation/: __init__.py  eva_utils.py  evaluator.py  plots.py
scripts/: test.py
test/: test.py  test_data.py
tests/: test.py  test_data.py
tests/evaluation/: AcaEva_test.py  Beta_test.py  Beta_test.pyBeta_test.py  MSR_Test.py  aca_eva1_test.ipynb  eva_utils.py  fama_macbeth.py  grs.py  (+1 more)
(+32 files in other folders)
