[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire"
version = "0.1.0"
description = "The bundled opensource toolkit for book Navigate through the Factor Zoo: The Science of Factor Investing."
readme = "README.md"
authors = [{ name = "Renjie Liao", email = "auderson@qq.com" }, { name = "Baochen Qiao", email = "baochenqiao@gmail.com" }]
dependencies = [
    "click >= 8.1.3",
]

[project.scripts]
fire = "fire.cli.command:cli"
